--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,14 @@
 /.pnp
 .pnp.js
 
+
+
+
+    src/logo.svg
+            src/reportWebVitals.js
+            src/setupTests.js
+
+
 # testing
 /coverage
 
